--- a/css/nav.css
+++ b/css/nav.css
@@ -2,7 +2,7 @@
 header {
     width: 100%;
     background-color: #111; /* noir */
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     z-index: 100;
